--- a/LayerModel5-bat.ipynb
+++ b/LayerModel5-bat.ipynb
@@ -82,6 +82,7 @@
     "    PairChain.m = m\n",
     "    PairChain.ef = ef\n",
     "    CenterStrict.m = m\n",
+    "    CenterStrict.ef = ef\n",
     "    #Signal001.m = m\n",
     "    #Signal001.ef = ef\n",
     "    #Signal001.L = m.SIG_L\n",
